<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculadora</string>
    <string name="about_text">Acerca de</string>
    <string name="about_activity_name">Perfil</string>
    <string name="text_nombre">Nombre</string>
    <string name="text_correo">Correo</string>
    <string name="text_sitio_web">Sitio Web</string>
    <string name="text_phone">Contacto</string>
    <string name="text_location">Ubicación</string>
    <string name="text_show_location">Mostrar mapa</string>
    <string name="text_habilitar_ubicacion">Habilitar ubicación</string>
    <string name="mm_modificar_info">Editar información</string>
    <string name="txt_lat">Latitud</string>
    <string name="txt_lon">Longitud</string>
    <string name="key_name">key_name</string>
    <string name="key_email">key_email</string>
    <string name="key_website">key_website</string>
    <string name="key_phone">key_phone</string>
    <string name="key_lat">key_lat</string>
    <string name="key_lon">key_lon</string>
    <string name="img_to_editactivity">img_to_editActivity</string>
    <string name="img_to_mainactivity">img_to_mainActivity</string>
    <string name="image_uri">image_uri</string>
    <string name="compatible_app_not_found_text">No se encontró aplicación compatible</string>
    <string name="delete_profile_info">Eliminar datos</string>
    <string name="txt_config">Configuración</string>
    <string name="profile_picture_path">profilePicture/</string>
    <string name="change_language">Cambiar idioma</string>
    <string name="calculator_title">Calculadora</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="about_info">Información</string>
    <string name="validation_name_1">El nombre debe contener al menos 3 caracteres</string>
    <string name="validation_name_2">El nombre no puede estar vacío</string>
    <string name="validation_email_1">El correo no puede estar vacío</string>
    <string name="validation_email_2">Formato inválido. Ej: x.xxx@correo.com</string>
    <string name="validation_website_1">El sitio web no puede estar vacío</string>
    <string name="validation_website_2">Formato inválido. Ej: https://miuv.com</string>
    <string name="validation_phone_1">El teléfono no puede estar vacío</string>
    <string name="validation_phone_2">7 dígitos para telefono fijo. 10 para celular.</string>
    <string name="validation_phone_3">Formato inválido. Ej: +52 2291590846</string>
    <string name="validation_lat_1">La latitud no puede estar vacía</string>
    <string name="validation_lat_2">La latitud debe estar entre -90 y 90</string>
    <string name="validation_lat_3">La latitud debe ser un número con punto decimal</string>
    <string name="validation_lon_1">La longitud no puede estar vacía</string>
    <string name="validation_lon_2">La longitud debe estar entre -180° y 180°</string>
    <string name="validation_lon_3">La longitud debe ser un número con punto decimal</string>
    <string name="toast_text_image_saved_successfully">Imagen guardada con éxito</string>
    <string name="toast_text_error_saving_image">Error al guardar la imagen</string>
    <string name="toast_text_image_deleted_successfully">Imagen eliminada con éxito</string>
    <string name="toast_text_no_image_to_delete">No hay imagen para eliminar</string>
</resources>
