<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/common_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/size_image"
            android:layout_height="@dimen/size_image">

            <androidx.cardview.widget.CardView
                android:id="@+id/image_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="0dp">

                <ImageView
                    android:id="@+id/edit_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/feminine_img_avatar" />

                <ImageButton
                    android:id="@+id/profile_editview_change_photo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left"
                    app:srcCompat="@drawable/add_photo_icon" />

                <ImageButton
                    android:id="@+id/profile_editview_delete_photo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    app:srcCompat="@drawable/remove_photo_icon" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_editview_name_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding"
            android:layout_marginTop="@dimen/common_padding"
            android:hint="@string/text_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_editview_name__edit_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_editview_email_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding"
            android:layout_marginTop="@dimen/common_padding"
            android:hint="@string/text_correo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_editview_email_edit_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_editview_website_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding"
            android:layout_marginTop="@dimen/common_padding"
            android:hint="@string/text_sitio_web">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_editview_website_edit_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_editview_phone_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding"
            android:layout_marginTop="@dimen/common_padding"
            android:hint="@string/text_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_editview_phone_edit_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding"
            android:layout_marginTop="@dimen/common_padding"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_editview_lat_textfield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/txt_lat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_editview_lat_edit_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:inputType="numberDecimal|numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_editview_lon_textfield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/txt_lon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_editview_lon_edit_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
